# Progenitor

./: .gitignore  Dockerfile.proxy  PLAN.md  README.md  pyproject.toml
benchmarks/: demo.py  run.py  run_software.py
benchmarks/results/: results.json
docs/: compatibility-phase1.md  compatibility-phase2.md  compatibility-phase3.md  phase2-improve-same-url.md  phase2-serve-no-code-changes.md
examples/: README.md  create_tiny_onnx.py  download_large_model.py  export_diffusion_like.py  export_gnn.py  export_large_mlp.py  export_rnn.py  export_small_model.py  export_transformer.py
examples/software/: README.md
progenitor/: __init__.py  api.py  cli.py  config.py  loader.py  runner.py  sparse_runner.py  validate.py
progenitor/backends/: __init__.py  _sparse_forward.c  _sparse_forward.dylib  _sparse_forward_win.c  accelerate_sparse.py  accelerate_sparse_native.py
progenitor/devices/: __init__.py  adapter.py  enhance.py  measure.py  pipeline.py  types.py
progenitor/devices/agent/: __init__.py  server.py
progenitor/devices/transports/: __init__.py  adb.py  agent.py  ssh.py
progenitor/optimizations/: __init__.py  block_removal.py  calibrate.py  conv1x1_to_matmul.py  conv_channel_prune.py  conv_prune.py  lowrank.py  passes.py  prune.py  quantize.py  structured_prune.py  surrogate.py  transformer_prune.py
progenitor/software/: __init__.py  analyze.py  enhance.py  manifest.py  measure.py  proxy.py
tests/: __init__.py  test_devices.py  test_enhance.py  test_runner.py  test_software.py
