[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "progenitor"
version = "0.1.0"
description = "Enhance ML models and software to peak performance. Phase 1: ML inference."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Ayush Ranjan" }]
dependencies = [
    "certifi>=2023.0.0",
    "numpy>=1.20",
    "onnx>=1.12",
    "onnxruntime>=1.14",
    "pyyaml>=6.0",
    "onnxsim>=0.4.33",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
sparse = ["torch>=2.0"]  # PyTorch sparse backend for --prune
sparse-mkl = ["sparse-dot-mkl"]  # Intel MKL sparse: 5–15× on Intel CPU (requires MKL runtime)

[project.scripts]
progenitor = "progenitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["progenitor*"]
